@@ -7,6 +7,9 @@ Version 2.0 (??/??/????)
          export/validation behaviour.
   * LWB: Changed the specification version number to be a decimal number instead of a
          free-form string.
+  * LWB: Changed the close save-as dialog such that when the workflow designer chooses
+         to cancel specifying a file, they are returned to the editor, instead of the
+         older functionality where the editor continued to close.
 
 Version 1.5.1 (08/10/2007)
   * LWB: Fixed a bug where multiple-instance tasks were not being initialsed properly and consequently
